--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass -w styles/style.scss -o public/css"
   },
   "keywords": [],
   "author": "",
@@ -11,9 +12,12 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.5.0",
+    "node-sass": "^9.0.0",
     "pug": "^3.0.3"
   }
 }
